<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/about"
                android:textColor="@color/nice_blue"
                android:textSize="30sp"
                android:textStyle="bold"
             />


            <TextView
                android:id="@+id/dialogText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/aboutText"
                android:textColor="@color/info_text"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/nice_blue"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/Ok"
                android:textSize="20sp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>