<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.outlier_numbers_input_page.OutlierNumbersInputFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/glass_blue"
    >

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/wave_background"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_blue_wave_background"
        android:orientation="horizontal">
    </View>

    <ImageView
        android:id="@+id/infoBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/circle_btn"
        android:src="@drawable/ic_baseline_question_mark_24"
        android:padding="3dp"
        android:translationZ="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/infoContainerCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave_background" >

        <TextView
            android:id="@+id/informationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/main_information"
            android:textAlignment="center"
            android:textColor="@color/nice_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numbersTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="30dp"
        android:background="@color/very_light_blue"
        app:errorEnabled="true"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoContainerCV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNumberInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="5dp"
            android:background="@color/very_light_blue"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/numbers_input_hint"
            android:lines="1"
            android:textSize="15sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/nice_blue"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/search_btn"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/numbersTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/numbersTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/numbersTextInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>